updated text and title

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,14 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Museum</title>
+  <title>Pet Fetcher!</title>
   <link rel="stylesheet" type="text/css" href="/css/jass.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <body>
   <header>
-    <h1>Welcome to Pet Fetcher</h1>
+    <h1>Welcome to Pet Fetcher!</h1>
+    <h3>Where wonderful homes await extraordinary pets!</h3>
   </header>
   <nav>
     <a href="/">Home</a>
@@ -23,7 +24,7 @@
   </nav>
   <main>
     <aside>
-      <h2>Enjoy the galleries!</h2>
+      <h2>Enjoy the experience!</h2>
     </aside>
     <div class="gallery">
       {{{body}}}
