--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,40 +1,40 @@
-<div class="row justify-space-between-md">
-  <div class="login-card">
-    <h2 class="page-title">Login</h2>
-    <form class="form login-form">
-      <div class="form-group">
+<div class="">
+  <div class="">
+    <h2 class="">Login</h2>
+    <form class="">
+      <div class="">
         <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <input class="" type="text" id="email-login" />
       </div>
-      <div class="form-group">
+      <div class="">
         <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <input class="" type="password" id="password-login" />
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+      <div class="">
+        <button class="" type="submit">login</button>
       </div>
     </form>
   </div>
-  <div class="login-card">
-    <h2 class="page-title">Signup</h2>
-    <form class="form signup-form">
-      <div class="form-group">
+  <div class="">
+    <h2 class="">Signup</h2>
+    <form class="">
+      <div class="">
         <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
+        <input class="" type="text" id="username-signup" />
       </div>
-      <div class="form-group">
+      <div class="">
         <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <input class="" type="text" id="email-signup" />
       </div>
-      <div class="form-group">
+      <div class="">
         <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <input class="" type="password" id="password-signup" />
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+      <div class="">
+        <button class="" type="submit">signup</button>
       </div>
     </form>
   </div>
 </div>
 
-<script src="./js/login.js"></script>
+<script src="/javascript/login.js"></script>
