added input fields, adjusted logic, and fixed bug with API routes. Tailwind and UIKit can be used together. Going to use convertAPI to store images as SVG files so we don't run out of space on heroku

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div class="">
   <div class="">
     <h2 class="">Login</h2>
-    <form class="">
+    <form id="login-form" class="">
       <div class="">
         <label for="email-login">Email:</label>
         <input class="" type="text" id="email-login" />
@@ -17,7 +17,7 @@
   </div>
   <div class="">
     <h2 class="">Signup</h2>
-    <form class="">
+    <form id="signup-form" class="">
       <div class="">
         <label for="username-signup">Username:</label>
         <input class="" type="text" id="username-signup" />
@@ -25,6 +25,18 @@
       <div class="">
         <label for="email-signup">Email:</label>
         <input class="" type="text" id="email-signup" />
+      </div>
+      <div class="">
+        <label for="phone-signup">Phone #:</label>
+        <input class="" type="text" id="phone-signup" />
+      </div>
+      <div class="">
+        <label for="state-signup">State:</label>
+        <input class="" type="text" id="state-signup" />
+      </div>
+      <div class="">
+        <label for="city-signup">City:</label>
+        <input class="" type="text" id="city-signup" />
       </div>
       <div class="">
         <label for="password-signup">Password:</label>
