--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,6 +40,8 @@
 
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
+<script src="/javascript/convertAPI.js"></script>
+
 </body>
 
 </html>
