fixed login functionality

--- a/views/partials/pet-info.handlebars
+++ b/views/partials/pet-info.handlebars
@@ -8,7 +8,7 @@
             <div>
             </div>
             <div>
-              <span class="">|</span><a href="/post/{{id}}" class="">{{comments.length}} {{format_plural "comment" comment.length}}</a>
+              <span class="">|</span><a href="/pet/{{id}}" class="">{{comments.length}} {{format_plural "comment" comment.length}}</a>
             </div>
         </div>
         
