--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -8,7 +8,7 @@
 
     <div>
         <button type="submit">add comment</button>
-        <button type="button" id="upvote-btn">upvote</button>
+        <button type="button" id="fave-btn">fave</button>
     </div>
 </form>
 {{/if}}
@@ -17,5 +17,5 @@
 
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
-<script src="/javascript/upvote.js"></script>
+<script src="/javascript/fave.js"></script>
 {{/if}}
