--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,8 +3,8 @@
 
     <form id="new-pet-form">
         <div>
-            <label for="post-pet_name">Name</label>
-            <input type="text" id="pet-name" name="post-title"/>
+            <label for="pet_name">Name</label>
+            <input type="text" id="pet-name" name="pet-name"/>
         </div>
         <div>
             <label for="species">Species</label>
@@ -16,14 +16,11 @@
             <label for="size">Size</label>
             <input id="size" name="size"/>
 
-            <label for="species">Species</label>
-            <input id="species" name="species"/>
-
             <label for="age">Age</label>
             <input id="age" name="age"/>
 
-            <label for="age">Bio</label>
-            <textarea id="age" name="age"></textarea>
+            <label for="bio">Bio</label>
+            <textarea id="bio" name="age"></textarea>
         </div>
         <button type="submit" class="">Create</button>
     </form>
