--- a/views/partials/pet-info.handlebars
+++ b/views/partials/pet-info.handlebars
@@ -1,7 +1,13 @@
 <div
   class="uk-height-large rounded-t-lg uk-card uk-card-default uk-card-body text-indigo-50 bg-gradient-to-b from-indigo-500 to-indigo-800 mx-3"
 >
-<img class="uk-position-center uk-preserve-width uk-responsive-height uk-object-scale-down" src="/images/IMG_7268.jpg" width="auto" height="auto" />
+{{!-- <img class="uk-position-center uk-preserve-width uk-responsive-height uk-object-scale-down" src="/images/IMG_7268.jpg" width="auto" height="auto" /> --}}
+<div class="uk-transition-toggle" tabindex="0">
+            <img class="uk-position-center uk-preserve-width uk-responsive-height uk-object-scale-down" src="/images/IMG_7268.jpg" width="auto" height="auto" alt="">
+            <div class="uk-transition-slide-left uk-position-top uk-overlay uk-overlay-default">
+                <p class="uk-h4 uk-margin-remove">{{bio}}</p>
+            </div>
+        </div>
   <div class="uk-position-bottom bg-indigo-700 p-8">
     <div class="flex flex-row items-center justify-between flex-wrap">
       <div class="card-title "> 
