fixed login phone added username to single pet added  pic url field to dash

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -19,6 +19,9 @@
             <label for="age">Age</label>
             <input id="age" name="age"/>
 
+            <label for="pic_filename">Image URL</label>
+            <input id="pic_filename" name="pic_filename"/>
+
             <label for="bio">Bio</label>
             <textarea id="bio" name="age"></textarea>
         </div>
