able to store images as strings nowcd desktop/projects/project-2 I need to hash it with bcrypt to control the string length. unable to store in db as-is, but after implementing bcrypt for pic_filename we will

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
 <section>
     <h2>Create New Post</h2>
 
-    <form id="new-pet-form">
+    <form>
         <div>
             <label for="pet_name">Name</label>
             <input type="text" id="pet-name" name="pet-name" />
@@ -36,7 +36,7 @@
         <img id="test-id" />
         <progress id="js-progressbar" class="uk-progress" value="0" max="100" hidden></progress>
 
-        <button type="submit" class="">Create</button>
+        <button  id="new-pet-submit" type="click" class="">Create</button>
     </form>
 </section>
 
@@ -55,4 +55,3 @@
 {{/if}}
 
 <script src="/javascript/add-pet.js"></script>
-<script src="/javascript/convertAPI.js"></script>
