One more change

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -10,45 +10,38 @@
     </div>
 
             <div class="">
-            <label for="pet_name"></label>
-            <input class="dashboard-inputs" type="text" placeholder="Pet Name" id="pet-name" name="pet-name"/>
+                <label for="pet_name"></label>
+                <input class="dashboard-inputs" type="text" placeholder="Pet Name" id="pet-name" name="pet-name"/>
             </div>    
 
             <div>
-            <span id="species-select">
-                <label for="species">Species</label>
-                <select name="species" id="species">
-                    <option value="dog">Dog</option>
-                    <option value="cat">Cat</option>
-                    <option value="other">Other</option>
-                </select>
-            </span>
-            {{!-- <input class="dashboard-inputs" placeholder="Species" id="species" name="species"/> --}}
+                <label for="species"></label>
+                <input class="dashboard-inputs" placeholder="Species" id="species" name="species"/>
             </div>
             
             <div class="uk-margin-small-top">
-            <label for="breed"></label>
-            <input class="dashboard-inputs" placeholder="Breed" id="breed" name="breed"/>
+                <label for="breed"></label>
+                <input class="dashboard-inputs" placeholder="Breed" id="breed" name="breed"/>
             </div>
             
             <div class="uk-margin-small-top">
-            <label for="size"></label>
-            <input class="dashboard-inputs" placeholder="Size" id="size" name="size"/>
+                <label for="size"></label>
+                <input class="dashboard-inputs" placeholder="Size" id="size" name="size"/>
             </div>
             
             <div class="uk-margin-small-top">
-            <label for="age"></label>
-            <input class="dashboard-inputs" placeholder="Age" id="age" name="age"/>
+                <label for="age"></label>
+                <input class="dashboard-inputs" placeholder="Age" id="age" name="age"/>
             </div>
             
             <div class="uk-margin-small-top">
-            <label for="pic_filename"></label>
-            <input class="dashboard-inputs" placeholder="Image URL" id="pic_filename" name="pic_filename"/>
+                <label for="pic_filename"></label>
+                <input class="dashboard-inputs" placeholder="Image URL" id="pic_filename" name="pic_filename"/>
             </div>
 
             <div class="uk-margin-small-top">
-            <label for="bio"></label>
-            <textarea class="dashboard-inputs" placeholder="Bio" id="bio" name="age"></textarea>
+                <label for="bio"></label>
+                <textarea class="dashboard-inputs" placeholder="Bio" id="bio" name="age"></textarea>
             </div>
 
             <button class="uk-button uk-button-secondary uk-width-1-1" type="submit" class="">Create</button>
