--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@
 }
 
 
-.dashboard-inputs {
+.dashboard-inputs, .login-inputs {
 display: block;
 margin-bottom: 20px;
 padding: 5px;
@@ -20,6 +20,5 @@ border-radius: 4px;
     
 }
 
-.dash-h2 {
-    color: azure;
-}
+
+
