--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,52 +1,67 @@
-<div class="">
-  <div class="">
-    <h2 class="">Login</h2>
-    <form id="login-form" class="">
+
+  <section class="uk-flex uk-flex-center uk-flex-around">
+    <div class="">
+      <div class="input-padding form-background uk-margin-small-top">
+    <h2 class="uk-text-large uk-text-muted">Login</h2>
+    <form id="login-form" class="form-background">
       <div class="">
-        <label for="email-login">Email:</label>
-        <input class="" type="text" id="email-login" />
+        <label for="email-login"></label>
+        <input class="login-inputs" placeholder="Email" type="text" id="email-login" />
       </div>
       <div class="">
-        <label for="password-login">Password:</label>
-        <input class="" type="password" id="password-login" />
+        <label for="password-login"></label>
+        <input class="login-inputs" placeholder="Password" type="password" id="password-login" />
       </div>
       <div class="">
-        <button class="" type="submit">login</button>
+        <button class="uk-button uk-button-secondary uk-width-1-1" type="submit">login</button>
+      </div>
+      </div>
+      </form>
+      </form>
+    
+  
+  
+    <div class="input-padding form-background uk-margin-small-top">
+    <h2 class="uk-text-large uk-text-muted">Signup</h2>
+    <form id="signup-form" class="form-background uk-margin-small-top">
+      
+      <div class="uk-margin-small-top">
+        <label for="username-signup"></label>
+        <input class="login-inputs" placeholder="Username" type="text" id="username-signup" />
+      </div>
+      
+      <div class="uk-margin-small-top">
+        <label for="email-signup"></label>
+        <input class="login-inputs" placeholder="Email" type="text" id="email-signup" />
+      </div>
+      
+      <div class="uk-margin-small-top">
+        <label for="phone-signup"></label>
+        <input class="login-inputs" placeholder="Phone #" type="text" id="phone-signup" />
+      </div>
+      
+      <div class="uk-margin-small-top">
+        <label for="state-signup"></label>
+        <input class="login-inputs" placeholder="State" type="text" id="state-signup" />
+      </div>
+      
+      <div class="uk-margin-small-top">
+        <label for="city-signup"></label>
+        <input class="login-inputs" placeholder="City" type="text" id="city-signup" />
+      </div>
+      
+      <div class="uk-margin-small-top">
+        <label for="password-signup"></label>
+        <input class="login-inputs" placeholder="Password" type="password" id="password-signup" />
+      </div>
+      
+      <div class="uk-margin-small-top">
+        <button class="uk-button uk-button-secondary uk-width-1-1" type="submit">signup</button>
+      </div>
       </div>
     </form>
-  </div>
-  <div class="">
-    <h2 class="">Signup</h2>
-    <form id="signup-form" class="">
-      <div class="">
-        <label for="username-signup">Username:</label>
-        <input class="" type="text" id="username-signup" />
-      </div>
-      <div class="">
-        <label for="email-signup">Email:</label>
-        <input class="" type="text" id="email-signup" />
-      </div>
-      <div class="">
-        <label for="phone-signup">Phone #:</label>
-        <input class="" type="text" id="phone-signup" />
-      </div>
-      <div class="">
-        <label for="state-signup">State:</label>
-        <input class="" type="text" id="state-signup" />
-      </div>
-      <div class="">
-        <label for="city-signup">City:</label>
-        <input class="" type="text" id="city-signup" />
-      </div>
-      <div class="">
-        <label for="password-signup">Password:</label>
-        <input class="" type="password" id="password-signup" />
-      </div>
-      <div class="">
-        <button class="" type="submit">signup</button>
-      </div>
-    </form>
-  </div>
-</div>
+    </div>
+  </section>
+
 
 <script src="/javascript/login.js"></script>
