--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
 <section class="uk-flex uk-flex-center">
     
     <div>
-    <form class="" id="new-pet-form">
+    <form class="">
         
         <div class="input-padding form-background uk-margin-small-top">
 
@@ -34,10 +34,10 @@
                 <input class="dashboard-inputs" placeholder="Age" id="age" name="age"/>
             </div>
             
-            <div class="uk-margin-small-top">
+            {{!-- <div class="uk-margin-small-top">
                 <label for="pic_filename"></label>
                 <input class="dashboard-inputs" placeholder="Image URL" id="pic_filename" name="pic_filename"/>
-            </div>
+            </div> --}}
 
             <div class="uk-margin-small-top">
                 <label for="bio"></label>
@@ -59,11 +59,12 @@
         <progress id="js-progressbar" class="uk-progress" value="0" max="100" hidden></progress>
 
 
-            <button class="uk-button uk-button-secondary uk-width-1-1" type="submit" class="">Create</button>
+            <button class="uk-button uk-button-secondary uk-width-1-1"  id="new-pet-submit" type="submit" class="">Create</button>
         </div>
         
         
     </form>
+    <span id="test-id"></span>
     </div>
 </section>
 
