polished up styling, styled edit post page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,5 +20,18 @@ border-radius: 4px;
     
 }
 
+.heart-icon {
+    position: relative;
+    left: 695px;
+    bottom: 65px
 
+}
 
+@media only screen and (max-width: 844) {
+    .heart-icon {
+        position: relative;
+        left: 200px;
+        bottom: 65px
+    
+    }
+}
