--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,10 +29,10 @@
     <main>
       {{{ body }}}
     </main>
-  </div>
-    <footer class="mt-auto flex justify-center bg-gradient-to-t from-violet-700 text-indigo-50 pb-4 pt-8 mt-6 text-xl">
+    <footer class="mt-auto w-full flex justify-center align-bottom bg-gradient-to-t from-violet-700 text-indigo-50 pb-4 pt-8 mt-6 text-xl">
       Thanks for visiting!
     </footer>
+  </div>
 
 {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
