--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -37,7 +37,7 @@
 
                         <div class="flex justify-center">
                             <label for="bio"></label>
-                            <textarea class="dashboard-inputs" placeholder="Bio" id="bio" name="age"></textarea>
+                            <textarea class="dashboard-inputs" placeholder="Bio" id="bio" name="bio"></textarea>
                         </div>
                     </div>
                 </div>
@@ -65,13 +65,21 @@
 </section>
 
 {{#if pets.length}}
-<section>
-    <h2>Your Listed Pets</h2>
-    <ol>
+    <div>
+        <h2 class="flex justify-center font-semibold pt-4 mt-10 mb-1 text-indigo-50 my-2 px-2 py-2 text-3xl">Your Listed Pets</h2>
+    </div>
+    <section class="uk-child-width-1-2@m flex justify-center"uk-grid>  
+      <ol>
         {{#each pets as |pet|}}
-        <li>
-            {{> pet-info pet}}
-            <a href="/dashboard/edit/{{pet.id}}" class="">Edit post</a>
+        <li class="">
+            <div>
+                    <div class="flex flex-col justify-end flex-wrap my-5">
+                        <a href="/dashboard/edit/{{pet.id}}"><i class="fa-solid fa-pen-to-square text-indigo-50 hover:text-indigo-100 text-2xl"></i></a>
+                    </div>
+                </div>
+                <div>
+                    {{> pet-info pet}}
+                </div>
         </li>
         {{/each}}
     </ol>
