did the best I could for styling but users can now edit and delete posts

--- a/views/edit-pet.handlebars
+++ b/views/edit-pet.handlebars
@@ -91,6 +91,6 @@
     </article>
 </div>
 
-<script src="/javascript/edit-post.js"></script>
-<script src="/javascript/delete-post.js"></script>
+<script src="/javascript/edit-pet.js"></script>
+<script src="/javascript/delete-pet.js"></script>
 <script src="/javascript/comment.js"></script>
