--- a/views/edit-pet.handlebars
+++ b/views/edit-pet.handlebars
@@ -15,7 +15,7 @@
         <div class="flex flex-wrap flex-row items-center mr-3">
           <div>
               <div class="flex my-5">
-                  <a href="/dashboard/edit/{{post.id}}"><i id="edit-post" class="fas fa-save text-sky-400 hover:text-sky-500 text-2xl"></i></a>
+                  <a href="/dashboard/"><i id="edit-pet" class="fas fa-save text-sky-400 hover:text-sky-500 text-2xl"></i></a>
               </div>
               <div class="flex my-5">
                   <button id="delete-post-btn"><i class="fa fa-trash text-red-500 hover:text-red-300 text-2xl" aria-hidden="true"></i></button>
