--- a/views/edit-pet.handlebars
+++ b/views/edit-pet.handlebars
@@ -26,6 +26,6 @@
 </form>
 </article>
 
-<script src="/javascript/edit-post.js"></script>
-<script src="/javascript/delete-post.js"></script>
+<script src="/javascript/edit-pet.js"></script>
+<script src="/javascript/delete-pet.js"></script>
 <script src="/javascript/comment.js"></script>
