--- a/views/edit-pet.handlebars
+++ b/views/edit-pet.handlebars
@@ -65,7 +65,7 @@
                         <span class="uk-text-middle">Update your pet's photo here!</span>
                         <div uk-form-custom>
                             <form encType="multipart/form-data" action="">
-                                <input id="img-input" type="file" multiple />
+                                <input id="img-input" type="file" value="{{pet.pic_filename}}" multiple />
                             </form>
                             <span class="uk-link text-sky-500">selecting one</span>
                         </div>
