--- a/views/partials/pet-info.handlebars
+++ b/views/partials/pet-info.handlebars
@@ -2,7 +2,6 @@
   class="uk-height-large rounded-t-lg uk-card uk-card-default uk-card-body text-indigo-50 bg-gradient-to-b from-indigo-500 to-indigo-800 mx-3"
 >
 <input id="get-id" value="{{id}}" class="invisible"/>
-{{!-- <img class="uk-position-center uk-preserve-width uk-responsive-height uk-object-scale-down" src="/images/IMG_7268.jpg" width="auto" height="auto" /> --}}
 <div class="uk-transition-toggle" tabindex="0">
             <img class="uk-position-center uk-preserve-width uk-responsive-height uk-object-scale-down" src="{{pic_filename}}" width="auto" height="auto" alt="">
             <div class="uk-transition-slide-left uk-position-top uk-overlay uk-overlay-default">
@@ -35,17 +34,20 @@
         </div>
       </div>
 
-      <div class="flex flex-col uk-flex-bottom">
-        <div class="py-1">
+      <div class="flex flex-col uk-flex-bottom justify-end">
+        <div class="pb-1">
+            <span id="fave-count" class="text-indigo-50 pr-2 text-xl py-1">{{fave_count}}</span><button id="addFave-btn"><i id="heart" class="fa-solid fa-heart text-3xl"></i></button>
+        </div>
+        <div class="pt-1">
           <a
             href="/pet/{{id}}"
             class="hover:text-indigo-200 hover:no-underline" uk-icon="icon: comments; ratio: 1.5"></a>
-        </div>
-        <div class="py-1">
-            <button id="addFave-btn"><i class="fa-solid fa-heart hover:text-indigo-200 hover:no-underline text-3xl"></i></button>
         </div>
       </div>
 
     </div>
   </div>
 </div>
+
+
+<script src="/javascript/add-fave.js"></script>
