--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
 </head>
 
 <body class="">
-  <div class="h-screen bg-gradient-to-b from-indigo-900 to-violet-900">
+  <div class="flex flex-col h-screen bg-gradient-to-b from-indigo-900 to-violet-900">
     <header class="flex flex-row items-center justify-between flex-wrap p-5 py-10 bg-gradient-to-b from-violet-900 to-transparent">
       <h1>
         <a class="text-indigo-50 text-2xl hover:text-indigo-200 hover:no-underline" href="/">Pet<i class="px-1 fa-solid fa-paw text-violet-400"></i>Fetcher</a>
