fixed some misc. css issues

--- a/views/edit-pet.handlebars
+++ b/views/edit-pet.handlebars
@@ -34,7 +34,7 @@
 
                         <div class="flex justify-center">
                             <label for="species"></label>
-                            <input class="dashboard-inputs" placeholder="Species" id="species" name="species" value={{pet.species}}/>
+                            <input class="dashboard-inputs" placeholder="Species" id="species" name="species" value="{{pet.species}}" />
                         </div>
                         
                         <div class="flex justify-center">
