fixed dashboard picture bug and added final styling to login and dashboard and single post

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,64 +1,65 @@
 
   <section class="uk-flex uk-flex-center uk-flex-around">
     <div class="">
-      <div class="input-padding form-background uk-margin-small-top">
-    <h2 class="uk-text-large uk-text-muted">Login</h2>
-    <form id="login-form" class="form-background">
-      <div class="">
+
+      <div class="rounded-t-lg bg-gradient-to-b from-violet-600 to-indigo-700 input-padding form-background uk-margin-small-top">
+    <h2 class="py-1 flex justify-center uk-text-large text-indigo-50">Login</h2>
+    <form id="login-form" class="bg-gradient-to-b from-violet-600 to-indigo-700">
+      <div class="uk-margin-small-top px-1">
         <label for="email-login"></label>
         <input class="login-inputs" placeholder="Email" type="text" id="email-login" />
       </div>
-      <div class="">
+      <div class="uk-margin-small-top px-1">
         <label for="password-login"></label>
         <input class="login-inputs" placeholder="Password" type="password" id="password-login" />
       </div>
-      <div class="">
-        <button class="uk-button uk-button-secondary uk-width-1-1" type="submit">login</button>
+     
+      
       </div>
-      </div>
-      </form>
-      </form>
+        <button class="uk-button uk-button-primary bg-indigo-800 hover:bg-indigo-500 uk-width-1-1 m-0 p-0 rounded-b-lg" type="submit">login</button>
+    </form>
+      
+      
     
   
   
-    <div class="input-padding form-background uk-margin-small-top">
-    <h2 class="uk-text-large uk-text-muted">Signup</h2>
-    <form id="signup-form" class="form-background uk-margin-small-top">
+    <div class="rounded-t-lg bg-gradient-to-b from-violet-600 to-indigo-700 input-padding mt-4">
+    <h2 class="py-1 flex justify-center uk-text-large text-indigo-50">Signup</h2>
+    <form id="signup-form" class="bg-gradient-to-b from-violet-600 to-indigo-700 uk-margin-small-top">
       
-      <div class="uk-margin-small-top">
+      <div class="uk-margin-small-top px-1">
         <label for="username-signup"></label>
         <input class="login-inputs" placeholder="Username" type="text" id="username-signup" />
       </div>
       
-      <div class="uk-margin-small-top">
+      <div class="uk-margin-small-top px-1">
         <label for="email-signup"></label>
         <input class="login-inputs" placeholder="Email" type="text" id="email-signup" />
       </div>
       
-      <div class="uk-margin-small-top">
+      <div class="uk-margin-small-top px-1">
         <label for="phone-signup"></label>
-        <input class="login-inputs" placeholder="Phone #" type="text" id="phone-signup" />
+        <input class="login-inputs" placeholder="Phone # : xxx-xxx-xxxx" type="text" id="phone-signup" />
       </div>
       
-      <div class="uk-margin-small-top">
+      <div class="uk-margin-small-top px-1">
         <label for="state-signup"></label>
-        <input class="login-inputs" placeholder="State" type="text" id="state-signup" />
+        <input class="login-inputs" placeholder="State (ex: FL)" type="text" id="state-signup" />
       </div>
       
-      <div class="uk-margin-small-top">
+      <div class="uk-margin-small-top px-1">
         <label for="city-signup"></label>
         <input class="login-inputs" placeholder="City" type="text" id="city-signup" />
       </div>
       
-      <div class="uk-margin-small-top">
+      <div class="uk-margin-small-top px-1">
         <label for="password-signup"></label>
         <input class="login-inputs" placeholder="Password" type="password" id="password-signup" />
       </div>
       
-      <div class="uk-margin-small-top">
-        <button class="uk-button uk-button-secondary uk-width-1-1" type="submit">signup</button>
+      
       </div>
-      </div>
+        <button class="uk-button uk-button-primary bg-indigo-800 hover:bg-indigo-500 uk-width-1-1 m-0 p-0 rounded-b-lg" type="submit">signup</button>
     </form>
     </div>
   </section>
