--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,7 +16,7 @@ border-radius: 4px;
 
 .input-padding {
     padding: 5px;
-    border-radius: 4px;
+    /* border-radius: 4px; */
     
 }
 
@@ -27,6 +27,17 @@ border-radius: 4px;
 
 }
 
+.selector-sizing {
+    width: 190px;
+    
+    -ms-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box; 
+    box-sizing:border-box;
+}
+
+
+
 @media only screen and (max-width: 844) {
     .heart-icon {
         position: relative;
@@ -35,3 +46,4 @@ border-radius: 4px;
     
     }
 }
+
