--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,63 +1,89 @@
-<section class="uk-flex uk-flex-center">
+<section class=" uk-flex uk-flex-center">
     
-    <div class="">
+    <div class="w-9/12">
         <form class="">
         
-            <div class="rounded-t-lg uk-margin-small-top bg-gradient-to-b from-violet-600 to-indigo-700 shadow-2xl shadow-indigo-700">
+            <div class="rounded-lg uk-margin-small-top bg-gradient-to-b from-violet-600 to-indigo-700 shadow-2xl shadow-indigo-700">
 
                 <div class="">
                     <div class="flex justify-center pt-4 mt-9 mb-7 items-center">
                         <h2 class="uk-text-large text-indigo-50"><i class="fa-solid fa-cat pr-2 text-violet-300"></i> Post Your Pet <i class="fa-solid fa-dog pl-2 text-violet-300"></i></h2>
                     </div>
-                    <div class="px-6" uk-grid>
+                    <div>
+                    </div>
+                        
+                    <div class="px-6 flex justify-center" uk-grid>
                         <div class="flex justify-center">
                             <label for="pet_name"></label>
                             <input class="dashboard-inputs" type="text" placeholder="Pet Name" id="pet-name" name="pet-name"/>
                         </div>    
 
                         <div class="flex justify-center">
-                            <label for="species"></label>
-                            <input class="dashboard-inputs" placeholder="Species" id="species" name="species"/>
+                            
+                            <select class="selector-sizing dashboard-inputs" id="species" name="species">
+                                <option value="dog">Dog</option>
+                                <option value="cat">Cat</option>
+                                <option value="bird">Bird</option>
+                                <option value="fish">Fish</option>
+                                <option value="reptile">Reptile</option>
+                            </select>
+  
                         </div>
                         
                         <div class="flex justify-center">
-                            <label for="breed"></label>
-                            <input class="dashboard-inputs" placeholder="Breed" id="breed" name="breed"/>
+                            <label for="pet_name"></label>
+                            <input class="dashboard-inputs" type="text" placeholder="Breed" id="breed" name="breed"/>
+                            
                         </div>
                         
                         <div class="flex justify-center">
-                            <label for="size"></label>
-                            <input class="dashboard-inputs" placeholder="Size" id="size" name="size"/>
+                            
+                            <select class="selector-sizing dashboard-inputs" id="size" name="size">
+                                <option value="xtra-small">Extra Small</option>
+                                <option value="small">Small</option>
+                                <option value="medium">Medium</option>
+                                <option value="large">Large</option>
+                                <option value="xtra-large">Extra Large</option>
+                            </select>
                         </div>
                         
                         <div class="flex justify-center">
-                            <label for="age"></label>
-                            <input class="dashboard-inputs" placeholder="Age" id="age" name="age"/>
+                            
+                            <select class="selector-sizing dashboard-inputs" id="age" name="age">
+                                <option value="infant">0 to 1 yrs</option>
+                                <option value="young">1 to 3 yrs</option>
+                                <option value="young-adult">3-6 yrs</option>
+                                <option value="adult">6-9 yrs</option>
+                                <option value="senior">9 yrs +</option>
+                            </select>
                         </div>
 
                         <div class="flex justify-center">
                             <label for="bio"></label>
-                            <textarea class="dashboard-inputs" placeholder="Bio" id="bio" name="bio"></textarea>
+                            <textarea cols="24" class="dashboard-inputs" placeholder="Bio" id="bio" name="bio"></textarea>
                         </div>
                     </div>
                 </div>
                 <div class="mt-4 mx-0 px-0">
                     <div
-                    class="js-upload uk-placeholder uk-text-center bg-gradient-to-r from-violet-600 to-indigo-600 text-indigo-50 mb-0 mx-0 px-0">
+                    class="js-upload uk-placeholder uk-text-center bg-gradient-to-r from-indigo-500 to-blue-300 text-indigo-900 mb-0 mx-0 px-0">
                         <span uk-icon="icon: cloud-upload"></span>
                         <span class="uk-text-middle">Upload your pet's photo here!</span>
                         <div uk-form-custom>
                             <form encType="multipart/form-data" action="">
                                 <input id="img-input" type="file" multiple />
                             </form>
-                            <span class="uk-link text-sky-500">selecting one</span>
+                            <span class="uk-link text-sky-700">selecting one</span>
                         </div>
-                        <img id="test-id" />
                     </div>
                 </div>
+                        <div class="flex justify-center py-2">
+                            <img class="" id="test-id" width="400"/>
+                        </div>
+                        
 
 
-                <button class="uk-button uk-button-primary bg-indigo-800 hover:bg-indigo-500 uk-width-1-1 m-0 p-0"  id="new-pet-submit" type="submit">Create</button>
+                <button class="uk-button uk-button-primary bg-indigo-800 hover:bg-indigo-500 uk-width-1-1 m-0 p-0 rounded-b-lg"  id="new-pet-submit" type="submit">Create</button>
             </div>
             <div id="test-id"></div>
         </form>
