--- a/views/partials/pet-info.handlebars
+++ b/views/partials/pet-info.handlebars
@@ -1,15 +1,15 @@
 <div
-  class="uk-height-large rounded-t-lg uk-card uk-card-default uk-card-body text-indigo-50 bg-gradient-to-b from-indigo-500 to-blue-300 mx-3"
+  class="uk-height-large rounded-lg uk-card uk-card-default uk-card-body text-indigo-50 bg-gradient-to-b from-indigo-500 to-blue-300 mx-3"
 >
 <input id="get-id" value="{{id}}" class="invisible"/>
 <div class="uk-transition-toggle" tabindex="0">
             <img class="uk-position-center uk-preserve-width uk-responsive-height uk-object-scale-down" src="{{pic_filename}}" width="auto" height="auto" alt="">
-            <div class="uk-transition-slide-left uk-position-top uk-overlay uk-overlay-default rounded-t-lg">
+            <div class="uk-transition-slide-left uk-position-top uk-overlay uk-overlay-default rounded-lg">
                 <p class="uk-h4 uk-margin-remove">{{bio}}</p>
             </div>
         </div>
   
-  <div class="uk-position-bottom bg-indigo-700 p-8">
+  <div class="uk-position-bottom bg-indigo-700 p-8 rounded-b-lg">
     <div class="pt-3 relative">
       <div class="absolute bottom-0">
           <div class="flex flex-row items-center justify-between flex-wrap">
