--- a/views/single-pet.handlebars
+++ b/views/single-pet.handlebars
@@ -5,22 +5,24 @@
     </div>
 
 {{#if loggedIn}}
-<div class="flex flex-wrap justify-center items-center">
-    <article class="m-8">
+<div class="flex justify-center">
+    <article class="bg-gradient-to-r from-indigo-500 to-blue-300 text-indigo-900 m-8 p-8 rounded-lg">
         <form id="comment-form">
-            <div class="m-2">
-                <textarea class="rounded text-black p-2" id="comment-body"></textarea>
-            </div>
+            <div class="uk-grid-column-sm" uk-grid>
 
-            <div class="m-2">
-                <button type="submit" class="text-indigo-50 bg-violet-400 hover:bg-violet-300 text-white font-bold py-2 my-1 px-2 mx-1 rounded border-b-4 border-indigo-700 flex justify-center">add comment</button>
-                <button type="button" id="addFave-btn" class="text-indigo-50 bg-violet-400 hover:bg-violet-300 font-bold py-2 my-1 px-2 mx-1 rounded border-b-4 border-indigo-700 flex justify-center">Fave</button>
+                <div class="">
+                    <textarea placeholder="Leave a comment here !" class="border-solid border-2 border-indigo-500 shadow-2xl shadow-indigo-700 rounded text-black p-2" id="comment-body" rows="5" cols="20" ></textarea>
+                </div>
+
+                <div class="flex flex-col justify-end">
+                    <button type="submit" class="text-indigo-50 bg-violet-400 hover:bg-violet-300 text-white font-bold py-2 my-1 px-2  rounded border-b-4 border-indigo-700 flex justify-center"><i class="fa fa-comment text-2xl" aria-hidden="true"></i></button>
+                </div>
             </div>
         </form>
     </article>
 </div>
 {{/if}}
-<div class="flex h-screen justify-center items-center">
+<div class="flex justify-center items-center">
     {{> comments pet.comments}}
 </div>
 
