adjusted logic for fave to work on any page with a pet post. No longer doing toggle red color

--- a/views/single-pet.handlebars
+++ b/views/single-pet.handlebars
@@ -25,8 +25,8 @@
 <div class="flex justify-center items-center">
     {{> comments pet.comments}}
 </div>
+<input class="invisible" id="single-pet" />
 
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
-<script src="/javascript/add-fave.js"></script>
 {{/if}}
