--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,6 +36,7 @@
 
 {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
+  <script src="/javascript/add-fave.js"></script>
 {{/if}}
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
